--- a/styles.css
+++ b/styles.css
@@ -343,6 +343,10 @@ header h2 {
     margin-bottom: 0.5rem;
 }
 
+.t-formation h4 {
+    margin-bottom: 0.5rem;
+}
+
 .extra h2 {
     margin-bottom: 15px;
 }
